--- a/organisation-structure/src/app/project-dashboard/project-dashboard.component.html
+++ b/organisation-structure/src/app/project-dashboard/project-dashboard.component.html
@@ -1,4 +1,4 @@
-<div style="min-width: 1054px; background: linear-gradient(to top,#ffd89b,#19547b);height:100%">
+<div style="min-width: 1054px; background: linear-gradient(to top,#ffd89b,#19547b);height:100%;">
   <div  style="position: fixed;width: 100%;z-index: 1;">
     <div  style="margin: 8px;font-size: 26px; height: 48px;font-weight: bolder;
     padding: 8px;color: white;margin-left: 32px;">PROJECTS
