--- a/organisation-structure/src/app/detail-dashboard/detail-dashboard.component.html
+++ b/organisation-structure/src/app/detail-dashboard/detail-dashboard.component.html
@@ -44,7 +44,8 @@
     </div>
     <hr style="margin: 8px 0px;">
     <div  style="position: fixed;width: 100%;height:66%">
-        <router-outlet></router-outlet>
+      <app-structural-view-sample></app-structural-view-sample>
+      <router-outlet></router-outlet>
     </div>
 </div>
 
