--- a/organisation-structure/src/app/project-dashboard2/project-dashboard2.component.css
+++ b/organisation-structure/src/app/project-dashboard2/project-dashboard2.component.css
@@ -1,9 +1,13 @@
 .example-card {
     max-width: 400px;
+    padding:0px;
+    box-shadow: 1px 1px 2px 2px lightgray;
+    border-bottom : 4px solid #150056;
+    color : #150056;
   }
-  
- .example-card:hover{
-    transform : scale(1.09);
+
+a{
+    color: #150056;
 }
 
 .module{
@@ -16,4 +20,45 @@
     vertical-align: baseline;
     border-radius: .25rem;
     transition: color .15s
+}
+
+.card-content{
+    margin-bottom:0px;
+}
+
+.card-footer{
+    padding: 8px 8px;
+    margin: 0px;
+    height: 96px;
+}
+
+.personHover :hover{
+    transform : scale(1.9);
+}
+
+.searchSpan{
+    position: relative;
+    margin-left: 200px;
+}
+
+.searchArea{
+    height:32px;
+    width:500px;
+    font-size:14px;
+    outline:none;
+    border-radius:16px;
+    border-width: 1px;
+    text-indent: 20px;
+}
+
+
+
+@media (max-width : 907px){
+
+    .searchSpan{
+        margin-left: 32px;
+    }
+    .searchArea{
+        width: 200px;
+    }
 }
